--- a/css/index.css
+++ b/css/index.css
@@ -139,3 +139,20 @@ button[disabled=disabled], button:disabled {
 #mensagens-erro {
 	color: red;
 }
+.fadeOut{
+
+	opacity: 0;
+	transition: 0.5s;
+}
+#filtrar-tabela{
+
+	height: 50px;
+	width: 300px;
+    background-color: white;
+	
+
+}
+input{
+
+	color:black;
+}
